feat(users): add role management, @PreAuthorize access control and duplicate email check
- PATCH /api/users/{id}/role endpoint with full Swagger docs
- @PreAuthorize('hasRole(ADMIN)') on all restricted endpoints (GET, PUT, DELETE, GET/{id})
- UserService: check duplicate email in createUser() and updateUser() → ConflictException (409)
- UserRequestDTO: firstName/lastName @NotBlank grouped to OnCreate to allow optional update
- Frontend UsersService: role toggle API call

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>